--- a/arxiv/2020_02_arxiv.html
+++ b/arxiv/2020_02_arxiv.html
@@ -226,25 +226,78 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.00305">https://arxiv.org/abs/1912.00305</a></span> Deconfinement and chiral phase transitions in quark matter with a strong electric field<span class="Apple-converted-space"> </span></p>
 <p class="p1"><br></p>
 <p class="p1">20200217</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.05713.pdf">https://arxiv.org/pdf/2002.05713.pdf</a></span> Logarithmic Negativity in Quantum Lifshitz Theories<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.05916.pdf">https://arxiv.org/pdf/2002.05916.pdf</a></span> Jump in the c66 shear modulus at the superconducting transition of Sr2RuO4: Evidence for a two-component order parameter ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.05732.pdf">https://arxiv.org/pdf/2002.05732.pdf</a></span> Bosonization of the Q = 0 continuum of Dirac Fermions<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06013.pdf">https://arxiv.org/pdf/2002.06013.pdf</a></span> Aharonov-Bohm instability in fermionic Z2 gauge theories: topological order and soliton-induced deconfinement ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.05725.pdf">https://arxiv.org/pdf/2002.05725.pdf</a></span> Many-Body Chaos in the Sachdev-Ye-Kitaev Model *** (SYK model)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.05997.pdf">https://arxiv.org/pdf/2002.05997.pdf</a></span> BRST, Ward identities, gauge dependence and FRG<span class="Apple-converted-space"> </span></p>
-<p class="p2"><a href="https://arxiv.org/pdf/2002.06131.pdf">https://arxiv.org/pdf/2002.06131.pdf</a><span class="s2"> Perturbative BF theory<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.05759.pdf">https://arxiv.org/pdf/2002.05759.pdf</a></span> Quantum Chaos of Unitary Fermi Gases in Strong Pairing Fluctuation Region *** (Quantum chaos in BCS)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.05713">https://arxiv.org/abs/2002.05713</a></span> Logarithmic Negativity in Quantum Lifshitz Theories<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.05916">https://arxiv.org/abs/2002.05916</a></span> Jump in the c66 shear modulus at the superconducting transition of Sr2RuO4: Evidence for a two-component order parameter ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.05732">https://arxiv.org/abs/2002.05732</a></span> Bosonization of the Q = 0 continuum of Dirac Fermions<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.06013">https://arxiv.org/abs/2002.06013</a></span> Aharonov-Bohm instability in fermionic Z2 gauge theories: topological order and soliton-induced deconfinement ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.05725">https://arxiv.org/abs/2002.05725</a></span> Many-Body Chaos in the Sachdev-Ye-Kitaev Model *** (SYK model)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.05997">https://arxiv.org/abs/2002.05997</a></span> BRST, Ward identities, gauge dependence and FRG<span class="Apple-converted-space"> </span></p>
+<p class="p2"><a href="https://arxiv.org/abs/2002.06131">https://arxiv.org/abs/2002.06131</a><span class="s2"> Perturbative BF theory<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.05759">https://arxiv.org/abs/2002.05759</a></span> Quantum Chaos of Unitary Fermi Gases in Strong Pairing Fluctuation Region *** (Quantum chaos in BCS)</p>
 <p class="p3"><br></p>
 <p class="p1">20200218</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06292.pdf">https://arxiv.org/pdf/2002.06292.pdf</a></span> Disorder and magnetoconductivity in tilted Weyl semimetals<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06767.pdf">https://arxiv.org/pdf/2002.06767.pdf</a></span> Gram Matrices, Coherent States, and Hofstadter Butterfly with Flat Band<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06942.pdf">https://arxiv.org/pdf/2002.06942.pdf</a></span> PSEUDO-CRITICAL BEHAVIOR OF SPIN-1/2 ISING DIAMOND AND TETRAHEDRAL CHAINS<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06891.pdf">https://arxiv.org/pdf/2002.06891.pdf</a></span> Emergence of d ± ip-wave superconducting state at the edge of d-wave superconductors mediated by Andreev-bound-state-driven ferromagnetic fluctuations ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06458.pdf">https://arxiv.org/pdf/2002.06458.pdf</a></span> Theory of nonreciprocal Josephson effect *** (Naoto Nagaosa)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06721.pdf">https://arxiv.org/pdf/2002.06721.pdf</a></span> How many surface modes does one see on the boundary of a Dirac material?<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/1709.08657.pdf">https://arxiv.org/pdf/1709.08657.pdf</a></span> Operads for algebraic quantum field theory<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.04313.pdf">https://arxiv.org/pdf/2002.04313.pdf</a></span> Remarks on Replica Method and Sachdev-Ye-Kitaev Model *** (SYK model)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/1905.11556.pdf">https://arxiv.org/pdf/1905.11556.pdf</a></span> On Z2-indices for ground states of fermionic chains<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.06292">https://arxiv.org/abs/2002.06292</a></span> Disorder and magnetoconductivity in tilted Weyl semimetals<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.06767">https://arxiv.org/abs/2002.06767</a></span> Gram Matrices, Coherent States, and Hofstadter Butterfly with Flat Band<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.06942">https://arxiv.org/abs/2002.06942</a></span> PSEUDO-CRITICAL BEHAVIOR OF SPIN-1/2 ISING DIAMOND AND TETRAHEDRAL CHAINS<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.06891">https://arxiv.org/abs/2002.06891</a></span> Emergence of d ± ip-wave superconducting state at the edge of d-wave superconductors mediated by Andreev-bound-state-driven ferromagnetic fluctuations ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.06458">https://arxiv.org/abs/2002.06458</a></span> Theory of nonreciprocal Josephson effect *** (Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.06721">https://arxiv.org/abs/2002.06721</a></span> How many surface modes does one see on the boundary of a Dirac material?<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1709.08657">https://arxiv.org/abs/1709.08657</a></span> Operads for algebraic quantum field theory<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.04313">https://arxiv.org/abs/2002.04313</a></span> Remarks on Replica Method and Sachdev-Ye-Kitaev Model *** (SYK model)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1905.11556">https://arxiv.org/abs/1905.11556</a></span> On Z2-indices for ground states of fermionic chains<span class="Apple-converted-space"> </span></p>
+<br>
+<p class="p2">20200219</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.07736">https://arxiv.org/abs/2002.07736</a></span> Anisotropic RKKY interactions mediated by j = 3/2 quasiparticles in half-Heusler topological semimetal<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.07308">https://arxiv.org/abs/2002.07308</a></span> Parity non-conservation in a condensed matter system<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.07330">https://arxiv.org/abs/2002.07330</a></span> Universality of semisuper-Efimov effect<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.07197">https://arxiv.org/abs/2002.07197</a></span> The Frustration of being Odd: Can Boundary Conditions induce a Quantum Phase Transition?<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.07597">https://arxiv.org/abs/2002.07597</a></span> Model of interacting equilibrium and non-equilibrium phase transitions<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.07664">https://arxiv.org/abs/2002.07664</a></span> NONEQUILIBRIUM THERMODYNAMICS: EMERGENT AND FUNDAMENTAL<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.07714">https://arxiv.org/abs/2002.07714</a></span> Mirror anomaly in fermionic topological orders ****</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.07387">https://arxiv.org/abs/2002.07387</a></span> Field-induced dimer orders in quantum spin chains ***</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.07181">https://arxiv.org/abs/2002.07181</a></span> Linear resistivity and Sachdev-Ye-Kitaev (SYK) spin liquid behaviour in a quantum critical metal with spin-1/2 fermions *** (Eun-Ah Kim)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.07730">https://arxiv.org/abs/2002.07730</a></span> What limits the simulation of quantum computers?<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.07578">https://arxiv.org/abs/2002.07578</a></span> String monopoles, string walls, vortex-skyrmions and nexus objects in polar distorted B-phase of 3He *** (G.E. Volovik)</p>
+<p class="p1"><br></p>
+<p class="p2">20200220</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.07824">https://arxiv.org/abs/2002.07824</a></span> Many-body delocalization via symmetry emergence<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.07947">https://arxiv.org/abs/2002.07947</a></span> Charge-Density Wave Order on a π-flux Square Lattice ***</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.08107">https://arxiv.org/abs/2002.08107</a></span> Strange metal state near quantum superconductor-metal transition in thin films ***</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/1910.10173">https://arxiv.org/abs/1910.10173</a></span> Low-rank Sachdev-Ye-Kitaev models ***** (SYK model, Jaewon Kim, Ehud Altman)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2001.03454">https://arxiv.org/abs/2001.03454</a></span> Higher-dimensional generalizations of the Berry curvature ***</p>
+<p class="p1"><br></p>
+<p class="p2">20200221</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.08913">https://arxiv.org/abs/2002.08913</a></span> Exciton-Phonon Interaction and Relaxation Times from First Principles<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.08839">https://arxiv.org/abs/2002.08839</a></span> Fluctuation-dissipation supersymmetry<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.08478">https://arxiv.org/abs/2002.08478</a></span> Non-Hermitian quantum impurity systems in and out of equilibrium: noninteracting case<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.08451">https://arxiv.org/abs/2002.08451</a></span> Sr2RuO4, like doped cuprates and barium bismuthate, is a negative charge-transfer gap even parity superconductor with 3/4-filled oxygen band<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.08385">https://arxiv.org/abs/2002.08385</a></span> Entanglement Signatures of Multipolar Higher Order Topological Phases *** (Tayler Hughes)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.08711">https://arxiv.org/abs/2002.08711</a></span> Microscopic derivation of Ginzburg-Landau theories for hierarchical quantum Hall states<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.08904">https://arxiv.org/abs/2002.08904</a></span> Tunable correlation-driven symmetry breaking in twisted double bilayer graphene<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.08996">https://arxiv.org/abs/2002.08996</a></span> Dirac Particle with Memory: Proper Time Non-Locality<span class="Apple-converted-space"> </span></p>
+<p class="p1"><br></p>
+<p class="p2">20200224</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.09475">https://arxiv.org/abs/2002.09475</a></span> Dirty higher-order Dirac semimetal: Quantum criticality and bulk-boundary correspondence *** (Bitan Roy)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.09391">https://arxiv.org/abs/2002.09391</a></span> Symmetry indicators of band topology ***** (Adrian Po, Hoi Chun Po)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.08963">https://arxiv.org/abs/2002.08963</a></span> Supersymmetry method for interacting chaotic and disordered systems: the SYK model **** (SYK model by using supersymmetric method)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.09374">https://arxiv.org/abs/2002.09374</a></span> Topological chiral interface states beyond insulators<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.08970">https://arxiv.org/abs/2002.08970</a></span> Exact three-colored quantum scars from geometric frustration *** (Kyungmin Lee)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.09071">https://arxiv.org/abs/2002.09071</a></span> Four-point geometrical correlation functions in the two-dimensional Q-state Potts model: connections with the RSOS models<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.09158">https://arxiv.org/abs/2002.09158</a></span> A Non-Gaussian Variational Approach to Fermi Polarons in One- and Two-dimensional Lattices<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.08969">https://arxiv.org/abs/2002.08969</a></span> Emergent conservation laws and nonthermal states in the mixed-field Ising model<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.09356">https://arxiv.org/abs/2002.09356</a></span> How low can the fractional quantum Hall effect go? *** (J. K. Jain)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/1903.06662">https://arxiv.org/abs/1903.06662</a></span> Discrete gauge theories of charge conjugation<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/1809.07664">https://arxiv.org/abs/1809.07664</a></span> A Massive Field-Theoretic Model for Hodge Theory<span class="Apple-converted-space"> </span></p>
+<p class="p1"><br></p>
+<p class="p2">20200225</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.10353">https://arxiv.org/abs/2002.10353</a></span> Disorder correction to the minimal conductance of a nodal-point semimetal<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.09944">https://arxiv.org/abs/2002.09944</a></span> Equivalent critical behavior of a helical point contact and a two-channel Luttinger liquid - topological superconductor junction **(C. L. Kane, I. Affleck)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.10360">https://arxiv.org/abs/2002.10360</a></span> Non-Abelian Dirac node braiding and near-degeneracy of correlated phases at odd integer filling in magic angle twisted bilayer graphene *** (Oskar Vafek)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.10156">https://arxiv.org/abs/2002.10156</a></span> Upper critical field in ferromagnetic metals with triplet pairing<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/1910.06496">https://arxiv.org/abs/1910.06496</a></span> Hall Viscosity of Composite Fermions ***(J. K. Jain)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/1910.01841">https://arxiv.org/abs/1910.01841</a></span> Non-perturbative Quantum Field Theory and the Geometry of Functional Spaces<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.10352">https://arxiv.org/abs/2002.10352</a></span> Spiral waves: linear and nonlinear theory<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.10028">https://arxiv.org/abs/2002.10028</a></span> Lattice Gauge Theory for a Quantum Computer ***</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
