--- a/arxiv/2020_02_arxiv.html
+++ b/arxiv/2020_02_arxiv.html
@@ -298,6 +298,46 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p2"><span class="s1"><a href="https://arxiv.org/abs/1910.01841">https://arxiv.org/abs/1910.01841</a></span> Non-perturbative Quantum Field Theory and the Geometry of Functional Spaces<span class="Apple-converted-space"> </span></p>
 <p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.10352">https://arxiv.org/abs/2002.10352</a></span> Spiral waves: linear and nonlinear theory<span class="Apple-converted-space"> </span></p>
 <p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.10028">https://arxiv.org/abs/2002.10028</a></span> Lattice Gauge Theory for a Quantum Computer ***</p>
+<br>
+<p class="p1">20200226</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.10480">https://arxiv.org/abs/2002.10480</a></span> Effect of interactions on the quantization of the chiral photocurrent for double-Weyl semimetals ***<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11030">https://arxiv.org/abs/2002.11030</a></span> Functional renormalization group for a large moiré unit cell<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.10607">https://arxiv.org/abs/2002.10607</a></span> Feedback-based Mechanical Haldane Model<span class="Apple-converted-space"> </span></p>
+<p class="p2"><a href="https://arxiv.org/abs/1903.01064">https://arxiv.org/abs/1903.01064</a><span class="s2"> Duality in quantum work<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.10479">https://arxiv.org/abs/2002.10479</a></span> Topological Edge and Interface states at Bulk disorder-to-order Quantum Critical Points **** (Chao-Ming Jian, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.10844">https://arxiv.org/abs/2002.10844</a></span> Energy transport between critical one-dimensional systems with different central charges<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.10955">https://arxiv.org/abs/2002.10955</a></span> Novel criticality of Dirac fermions in the presence of emergent gauge fields ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.10580">https://arxiv.org/abs/2002.10580</a></span> Nematic and time-reversal breaking superconductivities coexisting with quadrupole order in a Γ3 system<span class="Apple-converted-space"> </span></p>
+<p class="p3"><br></p>
+<p class="p1">20200227</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11554">https://arxiv.org/abs/2002.11554</a></span> Migdal-Eliashberg theory of multi-band high-temperature superconductivity in field-effect-doped hydrogenated (111) diamond **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11105">https://arxiv.org/abs/2002.11105</a></span> Anomalous features of non-Hermitian topological states<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11186">https://arxiv.org/abs/2002.11186</a></span> Comment on “Quantum Time Crystals and Interacting Gauge Theories in Atomic Bose-Einstein Condensates” **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11345">https://arxiv.org/abs/2002.11345</a></span> Jordan-Wigner Dualities for Translation-Invariant Hamiltonians in Any Dimension: Emergent Fractons that are Fermions **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11405">https://arxiv.org/abs/2002.11405</a></span> Critical properties of a comb lattice<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11176">https://arxiv.org/abs/2002.11176</a></span> An elementary proof of 1D LSM theorems **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11257">https://arxiv.org/abs/2002.11257</a></span> Photoinduced η pairing in the Kondo lattice model<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11351">https://arxiv.org/abs/2002.11351</a></span> Slave-rotor theory on magic-angle twisted bilayer graphene<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11265">https://arxiv.org/abs/2002.11265</a></span> Exceptional band touching for strongly correlated systems in equilibrium<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11492">https://arxiv.org/abs/2002.11492</a></span> Exceeding the Landau Superflow Speed Limit with Topological Bogoliubov Fermi Surfaces ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11168">https://arxiv.org/abs/2002.11168</a></span> <b>Perturbative Quantum Field Theory and Homotopy Algebras<span class="Apple-converted-space"> </span></b></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1910.09675">https://arxiv.org/abs/1910.09675</a></span> Atiyah-Patodi-Singer index on a lattice ***</p>
+<p class="p2"><a href="https://arxiv.org/abs/1903.04893">https://arxiv.org/abs/1903.04893</a><span class="s2"> Conformal theory of everything<span class="Apple-converted-space"> </span></span></p>
+<p class="p3"><br></p>
+<p class="p1">20200228</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11757">https://arxiv.org/abs/2002.11757</a></span> SYK Superconductivity: Quantum Kuramoto and Generalized Richardson Models **** (Alex Kamenev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11722">https://arxiv.org/abs/2002.11722</a></span> Avoided quantum criticality in exact numerical simulations of a single disordered Weyl cone<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11817">https://arxiv.org/abs/2002.11817</a></span> A Duality Between U(1) Haah Code and 3D Smectic A Phase ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11823">https://arxiv.org/abs/2002.11823</a></span> Quantum Entangled Fractional Topology and Curvatures<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12039">https://arxiv.org/abs/2002.12039</a></span> Time-reversal versus chiral symmetry breaking in twisted bilayer graphene *** (Gonzalez)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2002.12283">https://arxiv.org/abs/2002.12283</a><span class="s2"> On fermionic minimal models<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12187">https://arxiv.org/abs/2002.12187</a></span> Pedagogical introduction to SYK model and 2D Dilaton Gravity<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11727">https://arxiv.org/abs/2002.11727</a></span> Magnon dispersion and dynamic spin response in three-dimensional spin models for α-RuCl3 *** (Lukas Janssen, Matthias Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11924">https://arxiv.org/abs/2002.11924</a></span> Path Integral for Spin-1 Chain in the Fluctuating Matrix Product State Basis ***(Jung Hoon Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12026">https://arxiv.org/abs/2002.12026</a></span> Fractonic order and emergent fermionic gauge theory ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12338">https://arxiv.org/abs/2002.12338</a></span> Frustrated Kondo impurity triad: a toy model of deconfinement ***** (Piers Coleman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.11344">https://arxiv.org/abs/2002.11344</a></span> Spin-orbit-phonon interaction as an origin of helical-symmetry breaking spin-triplet superconducting state<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12084">https://arxiv.org/abs/2002.12084</a></span> QFT and topology in two dimensions: SL(2,R)-symmetry and the de Sitter universe<span class="Apple-converted-space"> </span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
