--- a/arxiv/2020_03_arxiv.html
+++ b/arxiv/2020_03_arxiv.html
@@ -112,7 +112,7 @@ a:hover {text-decoration: underline; color: darkgray;}
     span.s2 {color: #000000}
     span.s3 {color: #000000}
     span.s4 {font: 12.0px '.Apple SD Gothic NeoI'; color: #dca10d}
-    span.s5 {font: 12.0px '.Apple SD Gothic NeoI'}
+    span.s5 {color: #000000}
   </style>
 <body style="background-color:#EFEFEF">
 
@@ -159,7 +159,13 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.05523">https://arxiv.org/abs/2002.05523</a></span> Covariant hamiltonian for supergravity in d=3 and d=4<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2001.02739">https://arxiv.org/abs/2001.02739</a></span> High-precision four-loop mass and wave function renormalization in QED<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1908.04305">https://arxiv.org/abs/1908.04305</a></span> Theory of the phase transition in random unitary circuits with measurements *** (Soonwon Choi, Ehud Altman)</p>
-<p class="p2"><a href="https://arxiv.org/abs/1906.07199">https://arxiv.org/abs/1906.07199</a><span class="s2"> Notes on 8 Majorana Fermions<span class="Apple-converted-space"> </span></span></p>
+<p class="p2"><a href="https://arxiv.org/abs/1906.07199">https://arxiv.org/abs/1906.07199</a><span class="s2"> Notes on 8 Majorana Fermions<span class="Apple-converted-space"> </span></span></p><br>
+<p class="p1">20200306</p>
+<p class="p1"><span class="s5"><a href="https://arxiv.org/abs/2003.02559">https://arxiv.org/abs/2003.02559</a></span> Kitaev Building-block Construction for Higher-order Topological Superconductors *** (Das Sarma)</p>
+<p class="p1"><span class="s5"><a href="https://arxiv.org/abs/2003.02266">https://arxiv.org/abs/2003.02266</a></span> Anomalous levitation and annihilation in Floquet topological insulators<span class="Apple-converted-space"> </span></p>
+<p class="p1"><a href="https://arxiv.org/abs/2003.02773">https://arxiv.org/abs/2003.02773</a><span class="s6"> Wilson Action for the O(N) Model<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s5"><a href="https://arxiv.org/abs/2003.02828">https://arxiv.org/abs/2003.02828</a></span> Relativistic Dynamics of Fluctuations and QCD Critical Point<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s5"><a href="https://arxiv.org/abs/1908.11351">https://arxiv.org/abs/1908.11351</a></span> SYK non Fermi Liquid Correlations in Nanoscopic Quantum Transport ***(Alexander Altland, Dmitry Bagrets, Alex Kamenev)<span class="Apple-converted-space"> </span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
