--- a/arxiv/2020_03_arxiv.html
+++ b/arxiv/2020_03_arxiv.html
@@ -165,7 +165,23 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s5"><a href="https://arxiv.org/abs/2003.02266">https://arxiv.org/abs/2003.02266</a></span> Anomalous levitation and annihilation in Floquet topological insulators<span class="Apple-converted-space"> </span></p>
 <p class="p1"><a href="https://arxiv.org/abs/2003.02773">https://arxiv.org/abs/2003.02773</a><span class="s6"> Wilson Action for the O(N) Model<span class="Apple-converted-space"> </span></span></p>
 <p class="p1"><span class="s5"><a href="https://arxiv.org/abs/2003.02828">https://arxiv.org/abs/2003.02828</a></span> Relativistic Dynamics of Fluctuations and QCD Critical Point<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s5"><a href="https://arxiv.org/abs/1908.11351">https://arxiv.org/abs/1908.11351</a></span> SYK non Fermi Liquid Correlations in Nanoscopic Quantum Transport ***(Alexander Altland, Dmitry Bagrets, Alex Kamenev)<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s5"><a href="https://arxiv.org/abs/1908.11351">https://arxiv.org/abs/1908.11351</a></span> SYK non Fermi Liquid Correlations in Nanoscopic Quantum Transport ***(Alexander Altland, Dmitry Bagrets, Alex Kamenev)<span class="Apple-converted-space"> </span></p><br>
+<p class="p1">20200309</p>
+<p class="p2"><a href="https://arxiv.org/abs/2003.03328">https://arxiv.org/abs/2003.03328</a><span class="s1"> Type-II topological metals<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.02847">https://arxiv.org/abs/2003.02847</a></span> Topological superconductivity, ferromagnetism, and valley-polarized phases in moir ́e systems: An RG analysis for twisted double bilayer graphene *** (Das Sarma, VHS RG in TBG)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.03039">https://arxiv.org/abs/2003.03039</a></span> Critical non-Hermitian Skin Effect<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.02850">https://arxiv.org/abs/2003.02850</a></span> Possible superconductivity with Bogoliubov Fermi surface in lightly doped Kagome U(1) spin liquid ***(Hong Yao)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2003.02855">https://arxiv.org/abs/2003.02855</a><span class="s1"> Mathematical Relativity<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/1909.11092">https://arxiv.org/abs/1909.11092</a></span> Generalized Euler Index, Holonomy Saddles, and Wall-Crossing<span class="Apple-converted-space"> </span></p>
+<p class="p3"><br></p>
+<p class="p1">20200310</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.03846">https://arxiv.org/abs/2003.03846</a></span> Normal density and moment of inertia of a moving superfluid (Gang Chen)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.04043">https://arxiv.org/abs/2003.04043</a></span> Scaling behavior of crystalline membranes: an ε-expansion approach ***</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.03916">https://arxiv.org/abs/2003.03916</a></span> The Coupled SYK model at Finite Temperature ***(Xiao-Liang Qi)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.04055">https://arxiv.org/abs/2003.04055</a></span> Spin-Triplet Superconductivity in UTe2 and Ferromagnetic Superconductors ****</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.04162">https://arxiv.org/abs/2003.04162</a></span> Phenomenological theory in reentrant uranium-based superconductors<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.04082">https://arxiv.org/abs/2003.04082</a></span> Weyl semimetals and spinc cobordism *******</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.04144">https://arxiv.org/abs/2003.04144</a></span> Dissipation in Lagrangian formalism<span class="Apple-converted-space"> </span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
